integrating early player and grid code

--- a/makefile.test
+++ b/makefile.test
@@ -1,18 +1,18 @@
 #makefile for CMD1
 
-all: fandango
+all: test_text
 
 CXX = g++
 CXXFLAGS = -Wall
 CXXFLAGS += -pedantic-errors
 CXXFLAGS += -g
 
-OBJS = fandango.o rooms.o player.o 
-SRCS = fandango.cpp rooms.cpp player.cpp
+OBJS = test_text.o rooms.o player.o 
+SRCS = test_text.cpp rooms.cpp player.cpp
 HEADERS = rooms.hpp player.hpp
 
-fandango: ${OBJS} ${HEADERS}
-	${CXX} ${CXXFLAGS} ${OBJS} -o fandango
+test: ${OBJS} ${HEADERS}
+	${CXX} ${CXXFLAGS} ${OBJS} -o test_text
 
 ${OBJS}: ${SRCS}
 	${CXX} ${CXXFLAGS} -c $(@:.o=.cpp)
